--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "kalapi",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Yet another simple express generator with ejs",
   "main": "./lib/index.js",
   "bin": {
     "kalapi": "./bin/kalapi.js"
   },
   "author": "Kiran Chauhan",
-  "license": "ISC"
+  "license": "GPL-3.0-or-later",
+  "keywords": [
+    "express",
+    "express-generator"
+  ]
 }
