--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "kalapi",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Yet another simple express generator with ejs",
   "main": "./lib/index.js",
   "bin": {
     "kalapi": "./bin/kalapi.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chauhankiran/kalapi.git"
+  },
+  "bugs": {
+    "url": "https://github.com/chauhankiran/kalapi/issues"
+  },
+  "homepage": "https://chauhankiran.github.io/kalapi/",
   "author": "Kiran Chauhan",
   "license": "GPL-3.0-or-later",
   "keywords": [
